trying to fix scroll on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100vh; */
 }
